--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vite_react_shadcn_ts",
+  "name": "friends-family-investment",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "build:dev": "vite build --mode development",
+    "deploy": "rm -rf dist && npm install --include=dev && vite build && npx wrangler pages deploy ./dist --project-name=friends-family-investment --commit-hash=$(date +%s)",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -62,6 +63,7 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.3",
+    "wrangler": "^4.6.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
